added: validator; updated: apidocs; somefixes;
